updated tomcat section with new tomcat configuration undate script